--- a/public/component/provider.html
+++ b/public/component/provider.html
@@ -60,8 +60,41 @@
         onAddCustomField() {
            this.editingData.custom_fields.push({ field_name: '', field_value: '', description: '', field_type: 'unset' });
         },
+        onRemoveModel(index) {
+            this.editingData.models.splice(index, 1);
+        },
+        onRemoveApiKey(index) {
+            this.editingData.provider_keys.splice(index, 1);
+        },
+        onRemoveCustomField(index) {
+            this.editingData.custom_fields.splice(index, 1);
+        },
         async commitProvider() {
             if (this.editingData) {
+                // Check required fields in models
+                for (let i = 0; i < this.editingData.models.length; i++) {
+                    if (!this.editingData.models[i].model_name) {
+                        alert('模型id 不能为空.');
+                        return;
+                    }
+                }
+
+                // Check required fields in api keys
+                for (let i = 0; i < this.editingData.provider_keys.length; i++) {
+                    if (!this.editingData.provider_keys[i].api_key) {
+                        alert('API Key 不能为空.');
+                        return;
+                    }
+                }
+
+                 // Check required fields in custom fields
+                for (let i = 0; i < this.editingData.custom_fields.length; i++) {
+                    if (!this.editingData.custom_fields[i].field_name) {
+                        alert('字段名 不能为空.');
+                        return;
+                    }
+                }
+
                 await request('/ai/manager/provider/commit',
                     {
                         method: 'POST' ,
@@ -131,13 +164,14 @@
                 <div class="section">
                     <div class="section-title">模型</div>
                     <div class="section-header">
-                        <span class="col">模型id</span>
+                        <span class="col required-field">模型id</span>
                         <span class="col">映射模型id</span>
                     </div>
-                    <template x-for="model in editingData.models">
+                    <template x-for="(model, index) in editingData.models" :key="index">
                         <div class="section-row">
-                            <input type="text" x-model="model.model_name" class="col form-input"></input>
+                            <input type="text" x-model="model.model_name" class="col form-input" required></input>
                             <input type="text" x-model="model.real_model_name" class="col form-input"></input>
+                            <button type="button" @click="onRemoveModel(index)">删除</button>
                         </div>
                     </template>
                     <button class="btn btn-primary" @click="onAddModel">添加模型</button>
@@ -146,13 +180,14 @@
                 <div class="section">
                     <div class="section-title">api key</div>
                     <div class="section-header">
-                        <span class="col">API Key</span>
+                        <span class="col required-field">API Key</span>
                         <span class="col">描述</span>
                     </div>
-                    <template x-for="key in editingData.provider_keys">
+                    <template x-for="(key, index) in editingData.provider_keys" :key="index">
                         <div class="section-row">
-                            <input type="text" x-model="key.api_key" class="col form-input"></input>
+                            <input type="text" x-model="key.api_key" class="col form-input" required></input>
                             <input type="text" x-model="key.description" class="col form-input"></input>
+                            <button type="button" @click="onRemoveApiKey(index)">删除</button>
                         </div>
                     </template>
                     <button class="btn btn-primary" @click="onAddApiKey">添加api key</button>
@@ -161,14 +196,14 @@
                 <div class="section">
                     <div class="section-title">自定义字段</div>
                     <div class="section-header">
-                        <span class="col">字段名</span>
+                        <span class="col required-field">字段名</span>
                         <span class="col">字段值</span>
                         <span class="col">描述</span>
                         <span class="col">字段类型</span>
                     </div>
-                    <template x-for="field in editingData.custom_fields">
+                    <template x-for="(field, index) in editingData.custom_fields" :key="index">
                         <div class="section-row">
-                            <input type="text" x-model="field.field_name" class="col form-input"></input>
+                            <input type="text" x-model="field.field_name" class="col form-input" required></input>
                             <input type="text" x-model="field.field_value" class="col form-input"></input>
                             <input type="text" x-model="field.description" class="col form-input"></input>
                             <select x-model="field.field_type" class="col form-select">
@@ -178,6 +213,7 @@
                                 <option value="float">float</option>
                                 <option value="boolean">boolean</option>
                             </select>
+                            <button type="button" @click="onRemoveCustomField(index)">删除</button>
                         </div>
                     </template>
                     <button class="btn btn-primary" @click="onAddCustomField">添加自定义字段</button>
@@ -223,13 +259,10 @@
             margin-right: 0;
         }
 
-        .form-select {
-            width: 100%;
-            padding: 8px;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-            box-sizing: border-box;
-            font-size: 14px;
+        .required-field::after {
+            content: "*";
+            color: red;
+            margin-left: 3px;
         }
     </style>
 </div>
