--- a/public/component/record.html
+++ b/public/component/record.html
@@ -1,29 +1,36 @@
 <div x-data="recordData">
-    <div class="table-header">
-        <span class="table-col">模型名称</span>
-        <span class="table-col">prompt tokens</span>
-        <span class="table-col">completion tokens</span>
-        <span class="table-col">是否流式</span>
-        <span class="table-col">首次响应</span>
-        <span class="table-col">总响应时间</span>
-        <span class="table-col">TPS</span>
-        <span class="table-col">请求时间</span>
-    </div>
-    <template x-for="record in result.list">
-        <div class="table-row">
-            <span class="table-col" x-text="record.model_name"></span>
-            <span class="table-col" x-text="record.prompt_tokens || '/'"></span>
-            <span class="table-col" x-text="record.completion_tokens || '/'"></span>
-            <span class="table-col" x-text="record.is_stream"></span>
-            <span class="table-col" x-text="record.first_token_time || '/'"></span>
-            <span class="table-col" x-text="record.response_time"></span>
-            <span class="table-col" x-text="record.completion_tokens ? (record.completion_tokens / (record.response_time - record.first_token_time || 0) * 1000).toFixed(2) : '/'"></span>
-            <span class="table-col" x-text="record.request_at"></span>
-        </div>
-    </template>
-    <div>
-        <span x-text="result.total"></span>
-    </div>
+    <table class="data-table">
+        <thead>
+            <tr>
+                <th>模型名称</th>
+                <th>Provider</th>
+                <th>API Key</th>
+                <th>prompt tokens</th>
+                <th>completion tokens</th>
+                <th>是否流式</th>
+                <th>首次响应</th>
+                <th>总响应时间</th>
+                <th>TPS</th>
+                <th>请求时间</th>
+            </tr>
+        </thead>
+        <tbody>
+            <template x-for="record in result.list" :key="record.id">
+                <tr>
+                    <td x-text="record.model_name"></td>
+                    <td x-text="getProviderName(record.provider_id)"></td>
+                    <td x-text="getApiKeyName(record.api_key_id)"></td>
+                    <td x-text="record.prompt_tokens || '/'"></td>
+                    <td x-text="record.completion_tokens || '/'"></td>
+                    <td x-text="record.is_stream"></td>
+                    <td x-text="record.first_token_time || '/'"></td>
+                    <td x-text="record.response_time"></td>
+                    <td x-text="record.completion_tokens ? (record.completion_tokens / (record.response_time - record.first_token_time || 0) * 1000).toFixed(2) : '/'"></td>
+                    <td x-text="record.request_at"></td>
+                </tr>
+            </template>
+        </tbody>
+    </table>
     <div class="pagination">
         <button @click="previousPage" :disabled="current_page === 1" class="pagination-button">Previous</button>
 
