--- a/public/component/model_transform.html
+++ b/public/component/model_transform.html
@@ -1,22 +1,28 @@
 <div x-data="modelTransformData" x-init="init">
     <button class="btn btn-primary" @click="startEditing()">添加模型转换</button>
-    <div class="table-header">
-        <span class="table-col">模型名称</span>
-        <span class="table-col">映射模型名称</span>
-        <span class="table-col">是否启用</span>
-        <span class="table-col">操作</span>
-    </div>
-    <template x-for="transform in model_transforms" :key="transform.id">
-        <div class="table-row">
-            <span class="table-col" x-text="transform.model_name"></span>
-            <span class="table-col" x-text="transform.map_model_name"></span>
-            <span class="table-col" x-text="transform.is_enabled"></span>
-            <div class="table-col">
-                <button class="btn btn-primary" @click="startEditing(transform.id)">修改</button>
-                <button class="btn btn-danger" @click="deleteTransform(transform)">删除</button>
-            </div>
-        </div>
-    </template>
+    <table class="data-table">
+        <thead>
+            <tr>
+                <th>模型名称</th>
+                <th>映射模型名称</th>
+                <th>是否启用</th>
+                <th>操作</th>
+            </tr>
+        </thead>
+        <tbody>
+            <template x-for="transform in model_transforms" :key="transform.id">
+                <tr>
+                    <td x-text="transform.model_name"></td>
+                    <td x-text="transform.map_model_name"></td>
+                    <td x-text="transform.is_enabled"></td>
+                    <td>
+                        <button class="btn btn-primary" @click="startEditing(transform.id)">修改</button>
+                        <button class="btn btn-danger" @click="deleteTransform(transform)">删除</button>
+                    </td>
+                </tr>
+            </template>
+        </tbody>
+    </table>
 
     <template x-if="showEditModel">
         <div class="model-mask" @click.self="stopEditing">
