--- a/public/component/provider.html
+++ b/public/component/provider.html
@@ -121,27 +121,33 @@
         }
     }">
     <button class="btn btn-primary" @click="startEditing()">添加</button>
-    <div class="table-header">
-        <span class="table-col">Key</span>
-        <span class="table-col">Name</span>
-        <span class="table-col">Use Proxy</span>
-        <span class="table-col">模型</span>
-        <span class="table-col">Api Key</span>
-        <span class="table-col">Actions</span>
-    </div>
-    <template x-for="provider in $store.data.providers">
-        <div class="table-row">
-            <span class="table-col" x-text="provider.provider_key"></span>
-            <span class="table-col" x-text="provider.name"></span>
-            <span class="table-col" x-text="provider.use_proxy"></span>
-            <div class="table-col"></div>
-            <div class="table-col">0</div>
-            <div class="table-col">
-                <button class="btn btn-primary" @click="startEditing(provider.id)">修改</button>
-                <button class="btn btn-danger" @click="deleteProvider(provider)">删除</button>
-            </div>
-        </div>
-    </template>
+    <table class="data-table">
+        <thead>
+            <tr>
+                <th>Key</th>
+                <th>Name</th>
+                <th>Use Proxy</th>
+                <th>模型</th>
+                <th>Api Key</th>
+                <th>Actions</th>
+            </tr>
+        </thead>
+        <tbody>
+            <template x-for="provider in $store.data.providers">
+                <tr>
+                    <td x-text="provider.provider_key"></td>
+                    <td x-text="provider.name"></td>
+                    <td x-text="provider.use_proxy"></td>
+                    <td></td>
+                    <td>0</td>
+                    <td>
+                        <button class="btn btn-primary" @click="startEditing(provider.id)">修改</button>
+                        <button class="btn btn-danger" @click="deleteProvider(provider)">删除</button>
+                    </td>
+                </tr>
+            </template>
+        </tbody>
+    </table>
 
     <template x-if="showEditModel">
         <div class="model-mask" @click.self="stopEditing">
