--- a/public/component/model_transform.html
+++ b/public/component/model_transform.html
@@ -1,9 +1,12 @@
 <div x-data="modelTransformData" x-init="init">
-    <button class="btn btn-primary" @click="startEditing()">添加模型转换</button>
-    <table class="data-table">
-        <thead>
-            <tr>
-                <th>模型名称</th>
+    <div class="content-header">
+        <button class="btn btn-primary" @click="startEditing()">添加模型转换</button>
+    </div>
+    <div class="content-body">
+        <table class="data-table">
+            <thead>
+                <tr>
+                    <th>模型名称</th>
                 <th>映射模型名称</th>
                 <th>是否启用</th>
                 <th>操作</th>
@@ -23,6 +26,7 @@
             </template>
         </tbody>
     </table>
+    </div> <!-- Close content-body -->
 
     <template x-if="showEditModel">
         <div class="model-mask" @click.self="stopEditing">
